@@ -1,0 +1,23 @@
+/* CreateAt.cpp */ 
+//----------------------------------------------------------------------------------------
+//
+//  Project: CCore 1.08
+//
+//  Tag: General
+//
+//  License: Boost Software License - Version 1.0 - August 17th, 2003 
+//
+//            see http://www.boost.org/LICENSE_1_0.txt or the local copy
+//
+//  Copyright (c) 2014 Sergey Strukov. All rights reserved.
+//
+//----------------------------------------------------------------------------------------
+ 
+#include <CCore/inc/gadget/CreateAt.h>
+ 
+namespace CCore {
+
+
+} // namespace CCore
+ 
+
